--- a/web/index.html
+++ b/web/index.html
@@ -28,8 +28,7 @@
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBfLdUJrKPOapKIYL2K74tsrChoJKncy0s"></script>
-  <title>googlemap</title>
+  <title>GoogleMapIntegrate</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
